# t-gen

./: LICENSE  README.md  settings.json  t-gen.py
templates/: CMakeLists.txt  Makefile  template.cc  test.py
