cmake_minimum_required(VERSION 3.8)
project(t-gen)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
file(GLOB SRCS ${PROJECT_SOURCE_DIR}/*.cc)
foreach(SRC ${SRCS})
  get_filename_component(EXE "${SRC}" NAME_WE)
  add_executable(${EXE} ${SRC})
endforeach(SRC)
